[tool.poetry]
name = "issue-summary"
version = "0.1.0"
description = "Create summary of GitHub issues"
authors = ["MasayaTahara <mocoso.0u1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
