[tool.poetry]
name = "issue-summary"
version = "0.1.0"
description = "Create summary of GitHub issues"
authors = ["MasayaTahara <mocoso.0u1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
